# self-evolving-moe-router

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  Makefile  PROJECT_CHARTER.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_EXECUTION_COMPLETE_V8.md  TERRAGON_AUTONOMOUS_EXECUTION_VALIDATION_REPORT.md  TERRAGON_IMPLEMENTATION_COMPLETE.md  TERRAGON_IMPLEMENTATION_REPORT.md  TERRAGON_NEXT_GEN_DOCUMENTATION.md  TERRAGON_V10_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  TERRAGON_V4_AUTONOMOUS_EXECUTION_COMPLETE.md  TERRAGON_V5_EXECUTION_REPORT.md  TERRAGON_V6_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_V7_COMPLETE_IMPLEMENTATION_REPORT.md  TERRAGON_V8_AUTONOMOUS_EXECUTION_COMPLETE.md  advanced_evolution_demo.py  advanced_research_execution_system.py  advanced_test_suite.py  automated_code_improver.py  autonomous_deployment_orchestrator.py  comprehensive_quality_gates.py  comprehensive_research_validation_1755638847.json  comprehensive_research_validator.py  (+83 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: project-metrics.json
.github/workflows/: ci-cd.yml  ci.yml
.terragon/: config.yaml  value-metrics.json
autonomous_execution_results/: terragon_v5_execution_1755525943.json
configs/: evolution_default.yaml
deployment/: Dockerfile  Dockerfile.nextgen  docker-compose.yml  entrypoint.sh  healthcheck.py  next-gen-docker-compose.yml  next-gen-startup.sh  production-deployment.yml  production-startup.sh
deployment-results/: autonomous_deployment_results.json
deployment/ci-cd/: github-actions.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  production-deployment.yaml  service.yaml
deployment/monitoring/: prometheus-config.yaml  (+1 more)
deployment_results/: terragon_v10_global_deployment_1756308845.json
docker/: Dockerfile.production
docs/: IMPLEMENTATION_SUMMARY.md  ROADMAP.md
evolution_results/: autonomous_enhancement_results.json  best_topology.json  evolution_state.json  metrics.json  optimized_simple_demo_results.json  robust_demo_results.json  simple_demo_results.json
examples/: basic_evolution.py  data_persistence_example.py
global-config/: regions.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
monitoring/: prometheus.yml  terragon-dashboard.json
quality_gates_results/: quality_gates_report.json  quality_gates_report_improved.json
quantum_evolution_results/: terragon_v5_results_1755525905.json  terragon_v5_results_1755525923.json  terragon_v5_results_1755525930.json
research_results/: research_pipeline_1756308168.json
research_validation_results/: research_methodology_report_1756308723.md  terragon_v10_research_validation_1756308723.json
scripts/: dependency_updater.py  metrics_collector.py  repository_maintenance.py  run_quality_gates.py
security/: network-policy.yaml  pod-security-policy.yaml
terragon_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_evolution_robustness.py  test_next_gen_features.py  test_performance.py  test_performance_scalability.py
(+60 files in other folders)
